2002-03-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSObjCRuntime.h: Remove bad markup in comments.
	* Headers/gnustep/base/NSString.h: Remove private class declaration
	and hide internals of NXConstantString behind dummy interface while
	improving comments.  Fix long overdue declaraction of methods in
	clsses rather than protocols.
	* Source/GSUserDefaults.h: removed
	* Source/GSPrivate.h: added
	* Source/GSCompatibility.m: fix for hidden private info.
	* Source/GSString.m: ditto
	* Source/NSArray.m: ditto
	* Source/NSCalendarDate.m: ditto
	* Source/NSDate.m: ditto
	* Source/NSDecimalNumber.m: ditto
	* Source/NSDictionary.m: ditto
	* Source/NSLog.m: ditto
	* Source/NSObjCRuntime.m: ditto
	* Source/NSScanner.m: ditto
	* Source/NSSerializer.m: ditto
	* Source/NSString.m: ditto
	* Source/NSUser.m: ditto
	* Source/NSUserDefaults.m: ditto
	General tidyups to hide some internal workings which should really
	not be exposed in public headers.

2002-03-12  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: regenerated with latest data.

2002-03-12  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSString.h: Add extra ivars needed by Darwin
	to NXConstantString.
	* Source/GSString.m: ([NXConstantString +initialize]): Remove constant
	string class reference setup for Darwin.
	* Source/NSProcessInfo.m (main): Put it here.
	
Tue Mar 12 11:13:51 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/Additions/GSXML.m ([-isEqualTo:]): Renamed everywhere to
	isEqual:

Tue Mar 12 09:21:20 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSAssertionHandler.m
	([-handleFailureInMethod:object:file:lineNumber:description:]): Log
	if the object is a class or an instance.

2002-03-12  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/configure.in: Check GNUstep directories for headers and
	libraries as well as standard system directories.

Tue Mar 12 07:37:44 2002  Nicola Pero  <n.pero@mi.flashnet.it>
